--- a/quizzes/manifest.json
+++ b/quizzes/manifest.json
@@ -3,32 +3,32 @@
   "quizzes": [
     {
       "id": "50-Question-gk-1",
-      "title": "Harder General Knowledge (50)",
+      "title": "General Knowledge (50)",
       "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-1.json"
     },
     {
       "id": "50-Question-gk-2",
-      "title": "Harder General Knowledge Quiz 2 (50 Questions)",
-      "description": "Challenging but fair mix of pop culture, history, science, geography, and technology.",
+      "title": "General Knowledge Quiz 2 (50 Questions)",
+      "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-2.json"
     },
     {
       "id": "50-Question-gk-3",
-      "title": "Harder General Knowledge Quiz 3 (50 Questions)",
-      "description": "Challenging trivia across pop culture, history, science, geography, and technology.",
+      "title": "General Knowledge Quiz 3 (50 Questions)",
+      "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-3.json"
     },
     {
       "id": "50-Question-gk-4",
-      "title": "Harder General Knowledge Quiz 4 (50 Questions)",
-      "description": "Challenging trivia across pop culture, history, science, geography, and technology.",
+      "title": "General Knowledge Quiz 4 (50 Questions)",
+      "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-4.json"
     },
     {
       "id": "50-Question-gk-5",
-      "title": "Harder General Knowledge Quiz 5 (50 Questions)",
-      "description": "Challenging trivia across pop culture, history, science, geography, and technology.",
+      "title": "General Knowledge Quiz 5 (50 Questions)",
+      "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-5.json"
     }
   ]
