--- a/quizzes/manifest.json
+++ b/quizzes/manifest.json
@@ -3,7 +3,7 @@
   "quizzes": [
     {
       "id": "50-Question-gk-1",
-      "title": "General Knowledge (50)",
+      "title": "General Knowledge Quiz 1 (50 Questions)",
       "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-1.json"
     },
