Add new quiz sets and enhance UI for Quiz Night section
- Introduced a new "Quiz Night" call-to-action section in index.html to promote new quiz sets.
- Added three new general knowledge quizzes (VI, VII, VIII) with diverse categories in JSON format.
- Updated manifest.json to include the new quizzes for easy access.
- Modified quizzes.js to reverse the order of quizzes for display.
- Enhanced CSS styles for the new CTA section to improve layout and readability.

--- a/quizzes/manifest.json
+++ b/quizzes/manifest.json
@@ -30,6 +30,24 @@
       "title": "General Knowledge Quiz 5 (50 Questions)",
       "description": "Challenging mix across 5 sections.",
       "file": "50-Question-gk-5.json"
+    },
+    {
+      "id": "50-Question-gk-6",
+      "title": "General Knowledge Quiz VI (50 Questions)",
+      "description": "Challenging but fair. New categories: Literature & Myth, Art & Architecture, Music & Performing Arts, Mathematics & Physics, Ancient Civilizations.",
+      "file": "50-Question-gk-6.json"
+    },
+    {
+      "id": "50-Question-gk-7",
+      "title": "General Knowledge Quiz VII (50 Questions)",
+      "description": "Challenging but fair. New categories: Sports & Games, Food & Drink, Business & Economics, Medicine & Human Body, Space & Astronomy.",
+      "file": "50-Question-gk-7.json"
+    },
+    {
+      "id": "50-Question-gk-8",
+      "title": "General Knowledge Quiz VIII (50 Questions)",
+      "description": "Challenging but fair. New categories: Language & Etymology, Inventions & Discoveries, Philosophy & Religion, Environment & Ecology, Exploration & Cartography.",
+      "file": "50-Question-gk-8.json"
     }
   ]
 }
